# emlineclipper

./: .gitignore  .readthedocs.yaml  README.md  README.rst  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
docs/: api.rst  conf.py  example.rst  index.rst  requirements.txt
src/emlineclipper/: emclip.py
tests/: SN1997ef_1997-12-29_07-12-00_FLWO-1.5m_FAST_CfA-Stripped.flm
