[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emlineclipper"
version = "0.0.1"
authors = [
  { name="Gabriel Finneran", email="gabfin15@gmail.com" },
]
description = "A tool for the removal of emission lines from supernova spectra."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/GabrielF98/emlineclipper"
Issues = "https://github.com/GabrielF98/emlineclipper/issues"